# screener

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .air.toml  Dockerfile.dev  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/config/: config.go
backend/internal/db/: postgres.go  redis.go
backend/internal/handler/: auth_handler.go  dashboard_handler.go  dataset_handler.go  ingestion_handler.go  marketplace_handler.go  solana_handler.go  user_handler.go
backend/internal/middleware/: auth.go  cors.go  logging.go  ratelimit.go
backend/internal/models/: dataset.go  marketplace.go  privacy.go  screentime.go  solana.go  user.go
backend/internal/pricing/: engine.go
backend/internal/privacy/: budget_tracker.go  differential.go  generalizer.go  kanonymity.go
backend/internal/repository/: dataset_repo.go  interfaces.go  marketplace_repo.go  purchase_repo.go  refresh_token_repo.go  screentime_repo.go  solana_repo.go  user_repo.go
backend/internal/router/: router.go
backend/internal/service/: anonymization_service.go  auth_service.go  credit_service.go  ingestion_service.go  marketplace_service.go  solana_service.go
backend/internal/solana/: client.go  escrow.go  keypair.go
backend/pkg/apierror/: errors.go
backend/pkg/handler/: utils.go  utils_test.go
contracts/: Dockerfile.anchor  deploy.sh
contracts/escrow/: Anchor.toml  Cargo.toml
contracts/escrow/programs/escrow/: Cargo.toml
contracts/escrow/programs/escrow/src/: lib.rs
frontend/: Dockerfile.dev  package.json
scripts/: seed.go
(+34 files in other folders)
