[package]
name = "screener-escrow"
version = "0.1.0"
description = "Escrow program for Screener data marketplace"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "screener_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
